--- a/birthday/main.html
+++ b/birthday/main.html
@@ -83,9 +83,7 @@
                         </ul>
                     </div>
                     <div class="idol_lbirthday_text count_1">
-                        <div>
-                            클라리스<br>
-                        </div>
+                        <div>클라리스</div>
                     </div>
                 </a>
             </div>
@@ -98,9 +96,7 @@
                         </ul>
                     </div>
                     <div class="idol_lbirthday_text count_1">
-                        <div>
-                            노노<br>
-                        </div>
+                        <div>노노</div>
                     </div>
                 </a>
             </div>
@@ -113,9 +109,7 @@
                         </ul>
                     </div>
                     <div class="idol_lbirthday_text count_1">
-                        <div>
-                            카렌<br>
-                        </div>
+                        <div>카렌</div>
                     </div>
                 </a>
             </div>
@@ -128,9 +122,7 @@
                         </ul>
                     </div>
                     <div class="idol_lbirthday_text count_1">
-                        <div>
-                            마유<br>
-                        </div>
+                        <div>마유</div>
                     </div>
                 </a>
             </div>
@@ -143,9 +135,7 @@
                         </ul>
                     </div>
                     <div class="idol_lbirthday_text count_1">
-                        <div>
-                            아나스타샤<br>
-                        </div>
+                        <div>아나스타샤</div>
                     </div>
                 </a>
             </div>
@@ -158,9 +148,7 @@
                         </ul>
                     </div>
                     <div class="idol_lbirthday_text count_1">
-                        <div>
-                            키요미<br>
-                        </div>
+                        <div>키요미</div>
                     </div>
                 </a>
             </div>
@@ -173,9 +161,7 @@
                         </ul>
                     </div>
                     <div class="idol_lbirthday_text count_1">
-                        <div>
-                            후미카<br>
-                        </div>
+                        <div>후미카</div>
                     </div>
                 </a>
             </div>
@@ -191,9 +177,7 @@
                         </ul>
                     </div>
                     <div class="idol_lbirthday_text count_1">
-                        <div>
-                            츠카사<br>
-                        </div>
+                        <div>츠카사</div>
                     </div>
                 </a>
             </div>
@@ -206,9 +190,7 @@
                         </ul>
                     </div>
                     <div class="idol_lbirthday_text count_1">
-                        <div>
-                            모모카<br>
-                        </div>
+                        <div>모모카</div>
                     </div>
                 </a>
             </div>
@@ -221,46 +203,25 @@
                         </ul>
                     </div>
                     <div class="idol_lbirthday_text count_1">
-                        <div>
-                            키요미<br>
-                        </div>
+                        <div>키요미</div>
                     </div>
                 </a>
             </div>
-            <script>
-                $(function() {
-                    $('#jsBtnBreaBannerTriplicate').on('click', function(e) {
-                        var elem = $('.area_banner_triplicate_after');
-                        if (elem.css('display') == 'none') {
-                            elem.slideDown(350);
-                            $(this).addClass("_close");
-                        } else {
-                            elem.slideUp(350);
-                            $(this).removeClass("_close");
-                        }
-                        e.preventDefault();
-                    });
-                });
-            </script>
+            <div class="area_birthday jsOnBanner">
+                <a href='fumika2021.html' class="banner_birthday_renewal area_banner_wrap">
+                    <div class="text_area">10월27일</div>
+                    <div class="idol_lbirthday">
+                        <ul>
+                            <li><img src='../image_sp/card/xs/fumika_37.jpg' width="30"></li>
+                        </ul>
+                    </div>
+                    <div class="idol_lbirthday_text count_1">
+                        <div>후미카</div>
+                    </div>
+                </a>
+            </div>
         </section>
         <script src="../js/min/mypage.min.js"></script>
-        <div class="lBox">
-            <section id="newInfo" class="newInfoArea">
-                <div class="bg_popup_top area_popup_top">
-                    <a href="#" class="btn_popup_close ibox_close btn_close_01">
-                        <div></div>
-                    </a>
-                </div>
-                <div class="newInfoBody">
-                </div>
-                <div class="bg_popup_bottom area_popup_bottom">
-                    <a href="#" class="btn_popup_close_02 ibox_close btn_close_02">
-                        <div></div>
-                    </a>
-                </div>
-                <div></div>
-            </section>
-        </div>
         <script src="../js/islider.js"></script>
         <footer>
         <div class="m-Top12">
@@ -271,27 +232,6 @@
             <a href="#top" id="toPageTop" class="mypage_under">
             </a>
         </footer>
-    </div>
-    <div id="mbga-pf-footer">
-        <script type="text/javascript" charset="UTF-8">
-            (function() {
-                document.addEventListener('DOMContentLoaded', function() {
-                    var list = document.getElementsByClassName('mbga-pf-footer-li');
-                    var i = 0,
-                        l = list.length;
-                    for (; i < l; i++) {
-                        var elem = list[i];
-                        elem.addEventListener('touchstart', function(e) {
-                            e.currentTarget.className = e.currentTarget.className.replace(/$/, ' mbga-pf-tapped');
-                        });
-                        elem.addEventListener('touchend', function(e) {
-                            e.currentTarget.className = e.currentTarget.className.replace(/ mbga-pf-tapped/, '');
-                        });
-                        elem.addEventListener('touchmove', function(e) {});
-                    }
-                });
-            })();
-        </script>
     </div>
 </body>
 
