--- a/birthday/fumika2021.html
+++ b/birthday/fumika2021.html
@@ -10,6 +10,26 @@
     <title>アイドルマスター シンデレラガールズ</title>
     <link rel="stylesheet" type="text/css" href="../css/rich/new_mypage_common.css" media="all">
     <link rel="apple-touch-icon-precomposed" href="../image_sp/ui/icon_bookmark.png">
+    <script type="text/javascript">
+        if (window.localStorage) {
+            var displaySet = localStorage.getItem('DisplayPositionSet');
+            if (displaySet == 1) {
+                if (navigator.userAgent.indexOf('Android') > 0) {
+                    document.write('<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">');
+                    document.getElementsByTagName('html')[0].style.zoom = document.documentElement.clientWidth / 320;
+                } else {
+                    document.write('<meta name="viewport" content="width=320, user-scalable=no">');
+                }
+                window.addEventListener('resize', function() {
+                    if (navigator.userAgent.indexOf('Android') > 0) document.getElementsByTagName('html')[0].style.zoom = document.documentElement.clientWidth / 320;
+                });
+            } else {
+                document.write('<meta name="viewport" content="width=device-width, user-scalable=no">');
+            }
+        } else {
+            document.write('<meta name="viewport" content="width=device-width, user-scalable=no">');
+        }
+    </script>
     <script src="../js/jquery-2.2.2.min.js"></script>
     <script src="../js/underscore-min.js"></script>
     <script src="../js/require.js"></script>
