--- a/cartoon/index.html
+++ b/cartoon/index.html
@@ -62,20 +62,20 @@
         <link rel="stylesheet" type="text/css" href='../css/rich/theater.css' media="all">
         <div class="theater-content m-Btm12">
             <div class="theater-page_header_new m-Head_img m-Btm4">
-                <div class="theater-latest_story_num">제1화</div>
-                <div class="theater-latest_update_date">12/3/28</div>
+                <div class="theater-latest_story_num">제1552화</div>
+                <div class="theater-latest_update_date">21/10/26</div>
                 <div class="theater-latest_thumbnail">
                     <a href='scene/1.html' class="jsOnDesignBtn">
-                    <img src="../image_sp/cartoon/1/cover.jpg" width="137"></a>
+                    <img src="../image_sp/cartoon/1552/cover.jpg" width="137"></a>
                 </div>
                 <div class="theater-latest_title">
-                    <div class="theater-latest_title_text">Sレア級の報酬!フェスの景品は?</div>
+                    <div class="theater-latest_title_text">えっ×4</div>
                 </div>
                 <a href='scene/1.html' class="theater-btn_watch theater-btn_new_theater jsOnDesignBtn"></a>
-                <div class="theater-history_story_num">제1화</div>
-                <div class="theater-history_update_date">13/5/21</div>
+                <div class="theater-history_story_num">제1552화</div>
+                <div class="theater-history_update_date">21/10/26</div>
                 <div class="theater-history_title">
-                    <div class="theater-latest_title_text">愛媛にきたデース!</div>
+                    <div class="theater-latest_title_text">えっ×4</div>
                 </div>
                 <a href='scene/111.html' class="theater-btn_watch theater-btn_recent jsOnDesignBtn"></a>
                 <form action="index.html" method="post">
@@ -150,6 +150,10 @@
                         <div class="theater-thumbnail_top"><div class="theater-story_num ">제358화</div></div>
                         <img src="../image_sp/cartoon/358/small_cover.jpg" width="88">
                         <div class="theater-thumbnail_bottom"><div class="theater-update_date">14/8/6</div></div>
+                    </a><a href='scene/433/1.html' class="theater-thumbnail jsOnDesignBtn">
+                        <div class="theater-thumbnail_top"><div class="theater-story_num ">제433화</div></div>
+                        <img src="../image_sp/cartoon/433/small_cover.jpg" width="88">
+                        <div class="theater-thumbnail_bottom"><div class="theater-update_date">14/12/20</div></div>
                     </a><a href='scene/454/1.html' class="theater-thumbnail jsOnDesignBtn">
                         <div class="theater-thumbnail_top"><div class="theater-story_num ">제454화</div></div>
                         <img src="../image_sp/cartoon/454/small_cover.jpg" width="88">
@@ -158,6 +162,10 @@
                         <div class="theater-thumbnail_top"><div class="theater-story_num ">제456화</div></div>
                         <img src="../image_sp/cartoon/456/small_cover.jpg" width="88">
                         <div class="theater-thumbnail_bottom"><div class="theater-update_date">15/2/4</div></div>
+                    </a><a href='scene/514/1.html' class="theater-thumbnail jsOnDesignBtn">
+                        <div class="theater-thumbnail_top"><div class="theater-story_num ">제514화</div></div>
+                        <img src="../image_sp/cartoon/514/small_cover.jpg" width="88">
+                        <div class="theater-thumbnail_bottom"><div class="theater-update_date">15/5/21</div></div>
                     </a><a href='scene/663/1.html' class="theater-thumbnail jsOnDesignBtn">
                         <div class="theater-thumbnail_top"><div class="theater-story_num ">제663화</div></div>
                         <img src="../image_sp/cartoon/663/small_cover.jpg" width="88">
@@ -166,14 +174,30 @@
                         <div class="theater-thumbnail_top"><div class="theater-story_num ">제665화</div></div>
                         <img src="../image_sp/cartoon/665/small_cover.jpg" width="88">
                         <div class="theater-thumbnail_bottom"><div class="theater-update_date">16/2/26</div></div>
+                    </a><a href='scene/676/1.html' class="theater-thumbnail jsOnDesignBtn">
+                        <div class="theater-thumbnail_top"><div class="theater-story_num ">제676화</div></div>
+                        <img src="../image_sp/cartoon/676/small_cover.jpg" width="88">
+                        <div class="theater-thumbnail_bottom"><div class="theater-update_date">16/3/20</div></div>
                     </a><a href='scene/745/1.html' class="theater-thumbnail jsOnDesignBtn">
                         <div class="theater-thumbnail_top"><div class="theater-story_num ">제745화</div></div>
                         <img src="../image_sp/cartoon/745/small_cover.jpg" width="88">
                         <div class="theater-thumbnail_bottom"><div class="theater-update_date">16/7/27</div></div>
+                    </a><a href='scene/765/1.html' class="theater-thumbnail jsOnDesignBtn">
+                        <div class="theater-thumbnail_top"><div class="theater-story_num ">제765화</div></div>
+                        <img src="../image_sp/cartoon/765/small_cover.jpg" width="88">
+                        <div class="theater-thumbnail_bottom"><div class="theater-update_date">16/9/4</div></div>
+                    </a><a href='scene/766/1.html' class="theater-thumbnail jsOnDesignBtn">
+                        <div class="theater-thumbnail_top"><div class="theater-story_num ">제766화</div></div>
+                        <img src="../image_sp/cartoon/766/small_cover.jpg" width="88">
+                        <div class="theater-thumbnail_bottom"><div class="theater-update_date">16/9/6</div></div>
                     </a><a href='scene/815/1.html' class="theater-thumbnail jsOnDesignBtn">
                         <div class="theater-thumbnail_top"><div class="theater-story_num ">제815화</div></div>
                         <img src="../image_sp/cartoon/815/small_cover.jpg" width="88">
                         <div class="theater-thumbnail_bottom"><div class="theater-update_date">16/12/7</div></div>
+                    </a><a href='scene/866/1.html' class="theater-thumbnail jsOnDesignBtn">
+                        <div class="theater-thumbnail_top"><div class="theater-story_num ">제866화</div></div>
+                        <img src="../image_sp/cartoon/866/small_cover.jpg" width="88">
+                        <div class="theater-thumbnail_bottom"><div class="theater-update_date">17/3/13</div></div>
                     </a><a href='scene/905/1.html' class="theater-thumbnail jsOnDesignBtn">
                         <div class="theater-thumbnail_top"><div class="theater-story_num ">제905화</div></div>
                         <img src="../image_sp/cartoon/905/small_cover.jpg" width="88">
@@ -182,6 +206,10 @@
                         <div class="theater-thumbnail_top"><div class="theater-story_num ">제909화</div></div>
                         <img src="../image_sp/cartoon/909/small_cover.jpg" width="88">
                         <div class="theater-thumbnail_bottom"><div class="theater-update_date">17/6/1</div></div>
+                    </a><a href='scene/959/1.html' class="theater-thumbnail jsOnDesignBtn">
+                        <div class="theater-thumbnail_top"><div class="theater-story_num ">제959화</div></div>
+                        <img src="../image_sp/cartoon/959/small_cover.jpg" width="88">
+                        <div class="theater-thumbnail_bottom"><div class="theater-update_date">17/9/5</div></div>
                     </a><a href='scene/966/1.html' class="theater-thumbnail jsOnDesignBtn">
                         <div class="theater-thumbnail_top"><div class="theater-story_num ">제966화</div></div>
                         <img src="../image_sp/cartoon/966/small_cover.jpg" width="88">
@@ -194,6 +222,70 @@
                         <div class="theater-thumbnail_top"><div class="theater-story_num ">제1015화</div></div>
                         <img src="../image_sp/cartoon/1015/small_cover.jpg" width="88">
                         <div class="theater-thumbnail_bottom"><div class="theater-update_date">17/12/19</div></div>
+                    </a><a href='scene/1048/1.html' class="theater-thumbnail jsOnDesignBtn">
+                        <div class="theater-thumbnail_top"><div class="theater-story_num ">제1048화</div></div>
+                        <img src="../image_sp/cartoon/1048/small_cover.jpg" width="88">
+                        <div class="theater-thumbnail_bottom"><div class="theater-update_date">18/2/20</div></div>
+                    </a><a href='scene/1126/1.html' class="theater-thumbnail jsOnDesignBtn">
+                        <div class="theater-thumbnail_top"><div class="theater-story_num ">제1126화</div></div>
+                        <img src="../image_sp/cartoon/1126/small_cover.jpg" width="88">
+                        <div class="theater-thumbnail_bottom"><div class="theater-update_date">18/7/13</div></div>
+                    </a><a href='scene/1149/1.html' class="theater-thumbnail jsOnDesignBtn">
+                        <div class="theater-thumbnail_top"><div class="theater-story_num ">제1149화</div></div>
+                        <img src="../image_sp/cartoon/1149/small_cover.jpg" width="88">
+                        <div class="theater-thumbnail_bottom"><div class="theater-update_date">18/8/30</div></div>
+                    </a><a href='scene/1150/1.html' class="theater-thumbnail jsOnDesignBtn">
+                        <div class="theater-thumbnail_top"><div class="theater-story_num ">제1150화</div></div>
+                        <img src="../image_sp/cartoon/1150/small_cover.jpg" width="88">
+                        <div class="theater-thumbnail_bottom"><div class="theater-update_date">18/8/31</div></div>
+                    </a><a href='scene/1219/1.html' class="theater-thumbnail jsOnDesignBtn">
+                        <div class="theater-thumbnail_top"><div class="theater-story_num ">제1219화</div></div>
+                        <img src="../image_sp/cartoon/1219/small_cover.jpg" width="88">
+                        <div class="theater-thumbnail_bottom"><div class="theater-update_date">19/1/3</div></div>
+                    </a><a href='scene/1220/1.html' class="theater-thumbnail jsOnDesignBtn">
+                        <div class="theater-thumbnail_top"><div class="theater-story_num ">제1220화</div></div>
+                        <img src="../image_sp/cartoon/1220/small_cover.jpg" width="88">
+                        <div class="theater-thumbnail_bottom"><div class="theater-update_date">19/1/4</div></div>
+                    </a><a href='scene/1231/1.html' class="theater-thumbnail jsOnDesignBtn">
+                        <div class="theater-thumbnail_top"><div class="theater-story_num ">제1231화</div></div>
+                        <img src="../image_sp/cartoon/1231/small_cover.jpg" width="88">
+                        <div class="theater-thumbnail_bottom"><div class="theater-update_date">19/1/25</div></div>
+                    </a><a href='scene/1260/1.html' class="theater-thumbnail jsOnDesignBtn">
+                        <div class="theater-thumbnail_top"><div class="theater-story_num ">제1260화</div></div>
+                        <img src="../image_sp/cartoon/1260/small_cover.jpg" width="88">
+                        <div class="theater-thumbnail_bottom"><div class="theater-update_date">19/3/18</div></div>
+                    </a><a href='scene/1292/1.html' class="theater-thumbnail jsOnDesignBtn">
+                        <div class="theater-thumbnail_top"><div class="theater-story_num ">제1292화</div></div>
+                        <img src="../image_sp/cartoon/1292/small_cover.jpg" width="88">
+                        <div class="theater-thumbnail_bottom"><div class="theater-update_date">19/5/16</div></div>
+                    </a><a href='scene/1331/1.html' class="theater-thumbnail jsOnDesignBtn">
+                        <div class="theater-thumbnail_top"><div class="theater-story_num ">제1331화</div></div>
+                        <img src="../image_sp/cartoon/1331/small_cover.jpg" width="88">
+                        <div class="theater-thumbnail_bottom"><div class="theater-update_date">19/8/12</div></div>
+                    </a><a href='scene/1332/1.html' class="theater-thumbnail jsOnDesignBtn">
+                        <div class="theater-thumbnail_top"><div class="theater-story_num ">제1332화</div></div>
+                        <img src="../image_sp/cartoon/1332/small_cover.jpg" width="88">
+                        <div class="theater-thumbnail_bottom"><div class="theater-update_date">19/8/13</div></div>
+                    </a><a href='scene/1368/1.html' class="theater-thumbnail jsOnDesignBtn">
+                        <div class="theater-thumbnail_top"><div class="theater-story_num ">제1368화</div></div>
+                        <img src="../image_sp/cartoon/1368/small_cover.jpg" width="88">
+                        <div class="theater-thumbnail_bottom"><div class="theater-update_date">19/10/31</div></div>
+                    </a><a href='scene/1426/1.html' class="theater-thumbnail jsOnDesignBtn">
+                        <div class="theater-thumbnail_top"><div class="theater-story_num ">제1426화</div></div>
+                        <img src="../image_sp/cartoon/1426/small_cover.jpg" width="88">
+                        <div class="theater-thumbnail_bottom"><div class="theater-update_date">20/4/30</div></div>
+                    </a><a href='scene/1497/1.html' class="theater-thumbnail jsOnDesignBtn">
+                        <div class="theater-thumbnail_top"><div class="theater-story_num ">제1497화</div></div>
+                        <img src="../image_sp/cartoon/1497/small_cover.jpg" width="88">
+                        <div class="theater-thumbnail_bottom"><div class="theater-update_date">21/2/28</div></div>
+                    </a><a href='scene/1528/1.html' class="theater-thumbnail jsOnDesignBtn">
+                        <div class="theater-thumbnail_top"><div class="theater-story_num ">제1528화</div></div>
+                        <img src="../image_sp/cartoon/1528/small_cover.jpg" width="88">
+                        <div class="theater-thumbnail_bottom"><div class="theater-update_date">21/7/9</div></div>
+                    </a><a href='scene/1552/1.html' class="theater-thumbnail jsOnDesignBtn">
+                        <div class="theater-thumbnail_top"><div class="theater-story_num ">제1552화</div></div>
+                        <img src="../image_sp/cartoon/1552/small_cover.jpg" width="88">
+                        <div class="theater-thumbnail_bottom"><div class="theater-update_date">21/10/26</div></div>
                     </a>
                 </div>
             </div>
